; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/s390/cio/extr_chsc.c___s390_process_res_acc.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/s390/cio/extr_chsc.c___s390_process_res_acc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.subchannel = type { i32, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 (%struct.subchannel*, i8*, i32)* }

@CHP_ONLINE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.subchannel*, i8*)* @__s390_process_res_acc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @__s390_process_res_acc(%struct.subchannel* %0, i8* %1) #0 {
  %3 = alloca %struct.subchannel*, align 8
  %4 = alloca i8*, align 8
  store %struct.subchannel* %0, %struct.subchannel** %3, align 8
  store i8* %1, i8** %4, align 8
  %5 = load %struct.subchannel*, %struct.subchannel** %3, align 8
  %6 = getelementptr inbounds %struct.subchannel, %struct.subchannel* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 8
  %8 = call i32 @spin_lock_irq(i32 %7)
  %9 = load %struct.subchannel*, %struct.subchannel** %3, align 8
  %10 = getelementptr inbounds %struct.subchannel, %struct.subchannel* %9, i32 0, i32 1
  %11 = load %struct.TYPE_2__*, %struct.TYPE_2__** %10, align 8
  %12 = icmp ne %struct.TYPE_2__* %11, null
  br i1 %12, label %13, label %30

13:                                               ; preds = %2
  %14 = load %struct.subchannel*, %struct.subchannel** %3, align 8
  %15 = getelementptr inbounds %struct.subchannel, %struct.subchannel* %14, i32 0, i32 1
  %16 = load %struct.TYPE_2__*, %struct.TYPE_2__** %15, align 8
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i32 0, i32 0
  %18 = load i32 (%struct.subchannel*, i8*, i32)*, i32 (%struct.subchannel*, i8*, i32)** %17, align 8
  %19 = icmp ne i32 (%struct.subchannel*, i8*, i32)* %18, null
  br i1 %19, label %20, label %30

20:                                               ; preds = %13
  %21 = load %struct.subchannel*, %struct.subchannel** %3, align 8
  %22 = getelementptr inbounds %struct.subchannel, %struct.subchannel* %21, i32 0, i32 1
  %23 = load %struct.TYPE_2__*, %struct.TYPE_2__** %22, align 8
  %24 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %23, i32 0, i32 0
  %25 = load i32 (%struct.subchannel*, i8*, i32)*, i32 (%struct.subchannel*, i8*, i32)** %24, align 8
  %26 = load %struct.subchannel*, %struct.subchannel** %3, align 8
  %27 = load i8*, i8** %4, align 8
  %28 = load i32, i32* @CHP_ONLINE, align 4
  %29 = call i32 %25(%struct.subchannel* %26, i8* %27, i32 %28)
  br label %30

30:                                               ; preds = %20, %13, %2
  %31 = load %struct.subchannel*, %struct.subchannel** %3, align 8
  %32 = getelementptr inbounds %struct.subchannel, %struct.subchannel* %31, i32 0, i32 0
  %33 = load i32, i32* %32, align 8
  %34 = call i32 @spin_unlock_irq(i32 %33)
  ret i32 0
}

declare dso_local i32 @spin_lock_irq(i32) #1

declare dso_local i32 @spin_unlock_irq(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
